[project]
name = "prompt-folder-nodes"
description = "Prompt Folder nodes for ComfyUI"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://example.com/prompt-folder-nodes"

[tool.comfy]
PublisherId = "prompt-folder-nodes"
DisplayName = "Prompt Folder Nodes"
Icon = ""
